# NumberConversionsPtitApp

./: CMakeLists.txt  NumberConversions.qmlproject  NumberConversions.qmlproject.qtds  NumberConversions.qmlproject.qtds.ELPKFq  README.md  decimaltobinary.cpp  decimaltobinary.h  main.qml  main.qml.autosave.UGlmLJ  qmlmodules
content/: App.qml  App.qml.NESnvC  Screen01.ui.qml  Screen01.ui.qml.autosave.XDpntP
imports/: CMakeLists.txt
imports/NumberConversions/: CMakeLists.txt  qmldir
imports/NumberConversions/designer/: plugin.metainfo
src/: binarytodecimal.cpp  binarytodecimal.h  binarytohex.cpp  binarytohex.h  decimaltobinary.cpp  decimaltobinary.h  decimaltohex.cpp  decimaltohex.h  hextobinary.cpp  hextobinary.h  hextodecimal.cpp  hextodecimal.h  import_qml_plugins.h  main.cpp  mainScreen.qml  nullconvertnumber.cpp  nullconvertnumber.h  numberconversionscontext.cpp  numberconversionscontext.h  numberconversionscontroller.cpp  numberconversionscontroller.h  numberconversionscore.cpp  numberconversionscore.h  numberconversionsstrategy.cpp  numberconversionsstrategy.h  numberconversiontypes.cpp  numberconversiontypes.h  validnumberconversions.cpp  validnumberconversions.h
